--- a/components/onlinepackagemanager/languages/opkman_const.es.po
+++ b/components/onlinepackagemanager/languages/opkman_const.es.po
@@ -19,18 +19,18 @@ msgstr "Cancelar"
 
 #: opkman_const.rsaddrepositorypackagefrm_bcancel_hint
 msgid "Close the dialog"
-msgstr ""
+msgstr "Cerrar diálogo"
 
 #: opkman_const.rsaddrepositorypackagefrm_bok_caption
 #, fuzzy
 #| msgid "Ok"
 msgctxt "opkman_const.rsaddrepositorypackagefrm_bok_caption"
 msgid "OK"
-msgstr "Ok"
+msgstr "OK"
 
 #: opkman_const.rsaddrepositorypackagefrm_bok_hint
 msgid "Close the dialog and create the package"
-msgstr ""
+msgstr "Cerrar diálogo y crear paquete"
 
 #: opkman_const.rsaddrepositorypackagefrm_caption
 msgid "Add repository package"
