--- a/components/onlinepackagemanager/languages/opkman_const.es.po
+++ b/components/onlinepackagemanager/languages/opkman_const.es.po
@@ -34,15 +34,15 @@ msgstr "Cerrar diálogo y crear paquete"
 
 #: opkman_const.rsaddrepositorypackagefrm_caption
 msgid "Add repository package"
-msgstr ""
+msgstr "Agregar paquete de repositorio"
 
 #: opkman_const.rsaddrepositorypackagefrm_rbaddexisting_caption
 msgid "Add existing repository package from file"
-msgstr ""
+msgstr "Agregar paquete de repositorio existente desde archivo"
 
 #: opkman_const.rsaddrepositorypackagefrm_rbcreatenew_caption
 msgid "Create a new repository package"
-msgstr ""
+msgstr "Crear un nuevo paquete de repositorio"
 
 #: opkman_const.rscategoriesfrm_bcancel_caption
 msgctxt "opkman_const.rscategoriesfrm_bcancel_caption"
@@ -81,19 +81,19 @@ msgstr "Crear"
 #: opkman_const.rscreatejsonforupdatesfrm_bhelp_caption
 msgctxt "opkman_const.rscreatejsonforupdatesfrm_bhelp_caption"
 msgid "Help"
-msgstr ""
+msgstr "Ayuda"
 
 #: opkman_const.rscreatejsonforupdatesfrm_btest_caption
 msgid "Test"
-msgstr ""
+msgstr "Probar"
 
 #: opkman_const.rscreatejsonforupdatesfrm_caption
 msgid "Create update JSON for package:"
-msgstr ""
+msgstr "Crear actualización JSON para paquete:"
 
 #: opkman_const.rscreatejsonforupdatesfrm_column0_text
 msgid "PackageFileName"
-msgstr ""
+msgstr "NombreArchivoPaquete"
 
 #: opkman_const.rscreatejsonforupdatesfrm_column1_text
 #, fuzzy
@@ -103,19 +103,19 @@ msgstr "Versión"
 
 #: opkman_const.rscreatejsonforupdatesfrm_column2_text
 msgid "Force notify"
-msgstr ""
+msgstr "Forzar notificación"
 
 #: opkman_const.rscreatejsonforupdatesfrm_column3_text
 msgid "Internal version"
-msgstr ""
+msgstr "Versión interna"
 
 #: opkman_const.rscreatejsonforupdatesfrm_error1
 msgid "Cannot create JSON for updates! Error message:"
-msgstr ""
+msgstr "¡No se puede crear JSON para actualizaciones! Mensaje error:"
 
 #: opkman_const.rscreatejsonforupdatesfrm_lblinktozip_caption
 msgid "Link to the package zip file"
-msgstr ""
+msgstr "Enlazar al archivo zip del paquete"
 
 #: opkman_const.rscreatejsonforupdatesfrm_message0
 msgid "Please check a repository package!"
