--- a/components/onlinepackagemanager/languages/opkman_const.es.po
+++ b/components/onlinepackagemanager/languages/opkman_const.es.po
@@ -119,32 +119,32 @@ msgstr "Enlazar al archivo zip del paquete"
 
 #: opkman_const.rscreatejsonforupdatesfrm_message0
 msgid "Please check a repository package!"
-msgstr ""
+msgstr "¡Por favor compruebe un paquete de repositorio!"
 
 #: opkman_const.rscreatejsonforupdatesfrm_message1
 msgid "Please check only one repository package!"
-msgstr ""
+msgstr "¡Por favor compruebe solo un paquete de repositorio!"
 
 #: opkman_const.rscreatejsonforupdatesfrm_message2
 msgid "Please enter a valid URL!"
-msgstr ""
+msgstr "¡Por favor ingrese una URL válida!"
 
 #: opkman_const.rscreatejsonforupdatesfrm_message3
 msgid "Please check at least one package file!"
-msgstr ""
+msgstr "¡Por favor compruebe al menos un archivo del paquete!"
 
 #: opkman_const.rscreatejsonforupdatesfrm_message4
 msgid "JSON for updates successfully created."
-msgstr ""
+msgstr "JSON para actualizaciones creadas correctamente."
 
 #: opkman_const.rscreaterepositoryfrm_badd_caption
 msgctxt "opkman_const.rscreaterepositoryfrm_badd_caption"
 msgid "Add"
-msgstr ""
+msgstr "Agregar"
 
 #: opkman_const.rscreaterepositoryfrm_badd_hint
 msgid "Add package to the current repository"
-msgstr ""
+msgstr "Agregar paquete al repositorio actual"
 
 #: opkman_const.rscreaterepositoryfrm_bcancel_caption
 #, fuzzy
@@ -155,7 +155,7 @@ msgstr "Cancelar"
 #: opkman_const.rscreaterepositoryfrm_bcancel_hint
 msgctxt "opkman_const.rscreaterepositoryfrm_bcancel_hint"
 msgid "Close this dialog"
-msgstr ""
+msgstr "Cerrar este diálogo"
 
 #: opkman_const.rscreaterepositoryfrm_bcreate_caption
 #, fuzzy
@@ -166,38 +166,38 @@ msgstr "Crear"
 #: opkman_const.rscreaterepositoryfrm_bcreate_hint
 msgctxt "opkman_const.rscreaterepositoryfrm_bcreate_hint"
 msgid "Create private repository"
-msgstr ""
+msgstr "Crear repositorio privado"
 
 #: opkman_const.rscreaterepositoryfrm_bdelete_caption
 msgctxt "opkman_const.rscreaterepositoryfrm_bdelete_caption"
 msgid "Delete"
-msgstr ""
+msgstr "Eliminar"
 
 #: opkman_const.rscreaterepositoryfrm_bdelete_hint
 msgid "Delete package from the current repository"
-msgstr ""
+msgstr "Eliminar paquete del repositorio actual"
 
 #: opkman_const.rscreaterepositoryfrm_bopen_caption
 msgctxt "opkman_const.rscreaterepositoryfrm_bopen_caption"
 msgid "Open"
-msgstr ""
+msgstr "Abrir"
 
 #: opkman_const.rscreaterepositoryfrm_bopen_hint
 msgid "Open private respository"
-msgstr ""
+msgstr "Abrir repositorio privado"
 
 #: opkman_const.rscreaterepositoryfrm_caption
 msgctxt "opkman_const.rscreaterepositoryfrm_caption"
 msgid "Create/Edit private repository"
-msgstr ""
+msgstr "Crear/Editar repositorio privado"
 
 #: opkman_const.rscreaterepositoryfrm_conf1
 msgid "Are you sure you wish to delete package: \"%s\"?"
-msgstr ""
+msgstr "Seguro desea eliminar el paquete: \"%s\"?"
 
 #: opkman_const.rscreaterepositoryfrm_conf2
 msgid "The following file: \"%s\" already exists in the current repository. Overwrite?"
-msgstr ""
+msgstr "El siguiente archivo: \"%s\" ya existe en el repositorio actual. Sobrescribe?"
 
 #: opkman_const.rscreaterepositoryfrm_error1
 msgid ""
